resources/istio-kyma-patch/templates/disable-mtls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: istio-ingressgateway-mtls-disable
spec:
  host: istio-ingressgateway.istio-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
