resources/istio-kyma-patch/templates/tiller-destinationrule.yaml
# Destination rule to disable (m)TLS when talking to helm tiller, as it doesn't have a sidecar.
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "tiller-deploy"
spec:
  host: tiller-deploy.kube-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
